--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-git add requirements.txt
-git commit -m "Added flask-cors to requirements"
-git push origin main
+Flask==2.2.3
+flask-cors==3.1.1
+yt-dlp==2025.1.2
